--- a/fotomatic_broken/index.html
+++ b/fotomatic_broken/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="../fotomatic_broken/resources/css/style.css">
+  <!--<link rel="stylesheet" href="../fotomatic_broken/resources/css/reset.css">-->
   <meta charset="UTF-8">
+  <title>Fotomatic</title>
 </head>
 <body>
   <!-- Header -->
