--- a/fotomatic_broken/index.html
+++ b/fotomatic_broken/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="../fotomatic_broken/resources/css/style.css">
-  <!--<link rel="stylesheet" href="../fotomatic_broken/resources/css/reset.css">-->
+  <link rel="stylesheet" href="../fotomatic_broken/resources/css/reset.css">
   <meta charset="UTF-8">
   <title>Fotomatic</title>
 </head>
@@ -58,7 +58,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-1.png" />
+            <img src="/fotomatic_broken/resources/images/feature-1.png" />
           </div>
           <div class="content">
             <h2>Advanced, automatic, instant</h2>
@@ -69,7 +69,7 @@
       <div class="feature">
         <div class="center">
           <div class="image-container">
-            <img src="images/feature-2.png" />
+            <img src="/fotomatic_broken/resources/images/feature-2.png">
           </div>
           <div class="content">
             <h2>Beautifully crafted inside-out</h2>
@@ -101,7 +101,7 @@
       </div>
     </div>
 
-    <!-- Quotes Section
+    <!-- Quotes Section -->
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
