--- a/fotomatic_broken/index.html
+++ b/fotomatic_broken/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="content">
       <a href="index.html" class="desktop logo">Fotomatic</a>
-      <nav class="desktop">`
+      <nav class="desktop">
         <ul>
           <li><a href="#">Product detail</a></li>
           <li><a href="#">About us</a></li>
